--- a/src/css.css
+++ b/src/css.css
@@ -3,12 +3,25 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 550%;
-	width: max-content;
-	display: block;
 	background-blend-mode: saturation;
 }
 
-.select-city {
+.container {
+	display: block;
+	max-width: 600px;
+	background: rgba(255, 255, 255, 0.4);
+	box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.4);
+	margin: 0 auto;
+	border-radius: 8px;
+	padding: 60px;
+}
+
+h1 {
+	text-align: center;
+}
+
+/* .select-city {
 	padding: 5px;
 	border-radius: 4px;
 }
+*/
